# fit_pet_app

./: .env  .gitnore  Exercise.db  README.md  Users.db  bot.py  config.py  crud_functions.py  pyproject.toml  requirements.txt
keyboards/: inline_keyboards.py  reply_keyboards.py
states/: user_states.py
tests/: test_bot_handlers.py  test_calorie_calculation.py  test_crud_function.py  test_validation.py
utils/: bad_words.py  messages.py
